# c-compiler

./: .gitignore  BNF_SPEC.txt  CMakeLists.txt  TODO_LIST.txt  results_coverage.txt
.cache/clangd/index/: lexer.cpp.43945D15FD5AF9F2.idx  lexer.h.424A7444913D763C.idx  test_lexer.cpp.2AAB5F206F21B13B.idx  token.h.22AF8376495DA298.idx
include/compiler/: ast.h  lexer.h  parse_error.h  parser.h  token.h  token_type.h  visitor.h
scripts/: build.sh  run_tests.sh  test.sh  test_and_coverage.sh
src/: CMakeLists.txt  ast.cpp  ast_printer.cpp  lexer.cpp  parser.cpp  pretty_printer.cpp  token.cpp
tests/: CMakeLists.txt  test_lexer.cpp  test_parser.cpp
